2015-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_num): Use format_val to print integral values
	as integers. Thanks to Hermann Peifer for the report.

2015-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* node.c (str2wstr): Upon finding an invalid character, if
	using UTF-8, use the replacement character instead of skipping
	it. Helps match() and other functions work better in the face
	of unexpected data.  Make the lint warning an unconditional
	warning.

	Unrelated:

	* awk.h: Add explanatory comment on the flags related to
	types and values.
	* mpfr.c (mpg_force_number): If setting NUMBER, clear STRING also
	when clearing MAYBE_NUM.
	(set_PREC): Check STRCUR instead of STRING.
	* node.c (r_force_number): If setting NUMBER, clear STRING also
	when clearing MAYBE_NUM.

2015-08-15         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c (dfamust): Restore c90 compat by moving some
	variable declarations to the top of the routine.

2015-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep. Yet again, again.

2015-08-02         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep. Yet again.

2015-07-21         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2015-07-18         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2015-07-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Sync with GNU grep.

2015-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex_internal.h, regexec.c: Sync with GLIBC.

	Unrelated:

	* regex_internal.c, regexec.c: __attribute --> __attribute__.

	Related:

	* regex_internal.h: Clean up defines for non-GCC for attribute;
	essentially sync it with GLIBC.

2015-05-26  Paul Eggert  <eggert@Penguin.CS.UCLA.EDU>

	* floatcomp.c (count_trailing_zeros): New function.
	This compiles to a single TZCNT instruction on the x86-64.