@@ -1,3 +1,8 @@
+2015-09-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (fpat5): New test.
+	* fpat5.awk, fpat5.in, fpat5.ok: New files.
+
 2015-09-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile.ok: Updated after code change.
