@@ -1,3 +1,10 @@
+2015-09-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* field.c (fpat_parse_field): Always use rp->non_empty instead
+	of only if in_middle. The latter can be true even if we've
+	already parsed part of the record. Thanks to Ed Morton
+	for the bug report.
+
 2015-09-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile.c (pp_num): Use format_val to print integral values
